--- a/index.html
+++ b/index.html
@@ -2,46 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My School Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green Valley School</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-        <h1>Welcome to My School</h1>
-        <p>Learning Today, Leading Tomorrow</p>
-    </header>
+<header>
+    <h1>Green Valley School</h1>
+    <p>Knowledge • Discipline • Success</p>
+</header>
 
-    <nav>
-        <a href="#about">About</a>
-        <a href="#subjects">Subjects</a>
-        <a href="#contact">Contact</a>
-    </nav>
+<nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Admissions</a>
+    <a href="#">Academics</a>
+    <a href="#">Contact</a>
+</nav>
 
-    <section id="about">
-        <h2>About Our School</h2>
-        <p>This is a sample school website made for a project.</p>
-    </section>
+<section class="hero">
+    <h2>Welcome to Green Valley School</h2>
+    <p>Shaping the future with quality education</p>
+</section>
 
-    <section id="subjects">
-        <h2>Subjects We Offer</h2>
-        <ul>
-            <li>Math</li>
-            <li>Science</li>
-            <li>English</li>
-            <li>History</li>
-        </ul>
-    </section>
+<section class="content">
+    <div class="card">
+        <h3>About Us</h3>
+        <p>Green Valley School is committed to academic excellence and character development.</p>
+    </div>
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Email: myschool@email.com</p>
-    </section>
+    <div class="card">
+        <h3>Our Mission</h3>
+        <p>To nurture young minds and prepare students for a successful future.</p>
+    </div>
 
-    <footer>
-        <p>© 2026 My School</p>
-    </footer>
+    <div class="card">
+        <h3>Facilities</h3>
+        <p>Modern classrooms, library, computer labs, and sports facilities.</p>
+    </div>
+</section>
+
+<footer>
+    <p>© 2026 Green Valley School | All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
-
